# Corporate-Helpdesk

./: .env.example  .gitignore  README.md  docker-compose.yml  empty.txt  test_ws.py  veritabani_bilgileri.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env  Dockerfile  package-lock.json  package.json  pyproject.toml  remove_employee_checks.py  reset_db.py  seed_software_articles.py
backend/alembic/: env.py
backend/alembic/versions/: 903a13378a50_add_hashed_password.py  fa596f306a1f_add_chat_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: analytics.py  articles.py  auth.py  chat.py  departments.py  notifications.py  tickets.py  users.py
backend/app/core/: azure.py  config.py  security.py
backend/app/models/: __init__.py  article.py  category.py  chat.py  department.py  ticket.py  user.py
backend/app/schemas/: notification.py  ticket.py
backend/prisma/: schema.prisma
backend/src/: chat.ts  index.ts
backend/src/middlewares/: authMiddleware.ts
backend/src/routes/: auth.ts  categories.ts  departments.ts  tickets.ts  users.ts
backend/tests/: conftest.py  test_auth.py  test_csat_sla.py  test_tickets.py  test_user_preferences.py
backend_python_old/: Dockerfile  entrypoint.sh  seed.py  seed_articles.py  seed_users.py  test_db.py  test_fastapi.py
docs/: api-contract.md  architecture.md  database-design.md  requirements.md  scope.md  user-stories.md
e2e/: package-lock.json  package.json
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+83 files in other folders)
