[project]
name = "corporate-helpdesk-backend"
version = "0.1.0"
description = "Backend API for Corporate Helpdesk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "alembic>=1.13.2",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.3.4",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
